--- a/modulo01/seletores.html
+++ b/modulo01/seletores.html
@@ -15,7 +15,7 @@
             <input type="text" name="Nome"><br>
             Email: <br>
             <input type="email" name="Email"><br>
-            <input type="submit" value="Enviar">
-        </form>
+        </form><br>
+        <input type="submit" value="Enviar">
     </body>
 </html>
